# Parcial3-HPC-

./: README.md
ModeloCpp/: CMakeLists.txt  main.cpp  regresionlineal.h
ModeloCpp/DataSet/: insuranceHPCCPP.csv
ModeloCpp/Debug/: CMakeCache.txt  Prediccion.txt  PrediccionTest.txt  cmake_install.cmake  vectorCosto.txt  vectorCostoTest.txt  vectorTheta.txt  vectorThetaTest.txt
ModeloCpp/Debug/.cmake/api/v1/reply/: cache-v2-7a11768ea810e9de65b6.json  cmakeFiles-v1-9421f0aefa257e01a37c.json  codemodel-v2-26da14dd1d33ba576a37.json  index-2022-05-19T17-06-16-0515.json  target-ModeloCpp-Debug-10891607fd15b6ce4747.json
ModeloCpp/EXTRACCION/: extracciondata.cpp  extracciondata.h
ModeloCpp/REGRESIONLINEAL/: regresion_lineal.cpp  regresion_lineal.h
ModeloPythonSklearn/: Parcial3(HPC).ipynb  insuranceHPC.csv
